Create default group for user

--- a/salt/configure/templates/unit.service.j2
+++ b/salt/configure/templates/unit.service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=DIMS {{ unit }} service
+Description=Soundfleet {{ unit }} service
 
 [Service]
 ExecStart={{ venv_dir }}/bin/{{ unit }}d
